karnc/tests/fixtures/positive/69_context_exports_transparent/src/commerce/orders.karn
context commerce.orders {
  exports transparent { OrderError }

  type OrderError = enum {
    EmptyCart,
    TooManyItems,
    PaymentDeclined,
  }
}
