karnc/tests/fixtures/negative/52_consumes_unknown_context/src/commerce/orders.karn
context commerce.orders {
  consumes commerce.nonexistent
}
